overlapping css fix

--- a/web/themes/custom/barbell/css/pojedine_strane.css
+++ b/web/themes/custom/barbell/css/pojedine_strane.css
@@ -66,7 +66,7 @@
     margin-right: 1em;
   }
 
-  #block-barbell-content p {
+  .page-node-type-article #block-barbell-content p {
     width: 1500px;
     margin: -1em auto 2em;
   }
